Gradle 8.0.2, Java 17, Junit 5